3.2
- Added feature to customized tags color
- Added shortcut to giveaway setting (SG Game Tags setting is there) in navbar right dropdown.
- Added new tags (Owned and Ignored)

3.1
- Changed way to get bundle status by using server to save bundle list. Won't make request to steamgifts for every games.
- Added Bundled Date to Bundle tag, can be seen when mouse hovering to bundle tags.
- Optimized Wishlist tags and it now appears outside giveaway page too.
- Bundle, Wishlist tags cache time reduced to 6 hours. Trading Cards, Achievement, Mac, Linux, Early Access still 24 hours.
- Changed how the script saves data. Now Trading Cards, Achievement, Mac, Linux, Early Access data saved as 1 data instead of 5 data per games. May reduce lags because of too many data stored. Need reinstall the script.
- Changed how the script process game title when ExtSG installed. It now ignores [NEW] and [FREE] instead of remove them in case ExtSG gets another tags.

2.12
- Added Early Access Tag, default is off.
- Changed Linux, Mac default as off.
- Added minimalist tag as option.
- Changed wishlist tag background color.
- Changed steamapi link : added genres in filter params.
- Changed packageapi link : removed filters params because it doesn't filter the result.
- Changed tag classes for their usage (preparation for custom color tag).
- Added hover text in SG Game Tags setting.

2.11.10
- Now saves steam data eventhough the tags is not turned on.

2.11.9
- Restructured codes, makes it possible to merge with minimalist version.
- Change all url filter to use regex.

2.11.6
- Fixed script crashing if featured giveaway has no image.

2.11.5
- Fixed bug bundled tags not appearing when there is [NEW] or [FREE] in the name because of ext SG.

2.11.2
- Fixed bug tags appearing in group member list page.

2.11.1
- Added support to Endless scroll.

2.10.3