@@ -1,6 +1,7 @@
 - New tags (Owned and Not Interested). Requires login to steam with current browser. Cache time 6 hours.
 - New button to refresh Bundle, Wishlist, Owned, Not Interested cache.
 - New tags (other steam categories, other steam user defined tags). Only by hovering the mouse.
+- fix bug trading card and achievement link for dlc.
 
 
 - FAQ in discussion
